# redfish/internal/entity/v1/computer_system.go
@@ -3,19 +3,20 @@ package redfish
 
 // ComputerSystem represents a Redfish Computer System entity.
 type ComputerSystem struct {
-	ID           string     `json:"Id"`
-	Name         string     `json:"Name"`
-	Description  string     `json:"Description,omitempty"`
-	BiosVersion  string     `json:"BiosVersion,omitempty"`
-	HostName     string     `json:"HostName,omitempty"`
-	SystemType   SystemType `json:"SystemType"`
-	Manufacturer string     `json:"Manufacturer"`
-	Model        string     `json:"Model"`
-	SerialNumber string     `json:"SerialNumber"`
-	PowerState   PowerState `json:"PowerState"`
-	Status       *Status    `json:"Status,omitempty"`
-	ODataID      string     `json:"@odata.id"`
-	ODataType    string     `json:"@odata.type"`
+	ID            string                       `json:"Id"`
+	Name          string                       `json:"Name"`
+	Description   string                       `json:"Description,omitempty"`
+	BiosVersion   string                       `json:"BiosVersion,omitempty"`
+	HostName      string                       `json:"HostName,omitempty"`
+	SystemType    SystemType                   `json:"SystemType"`
+	Manufacturer  string                       `json:"Manufacturer"`
+	Model         string                       `json:"Model"`
+	SerialNumber  string                       `json:"SerialNumber"`
+	PowerState    PowerState                   `json:"PowerState"`
+	Status        *Status                      `json:"Status,omitempty"`
+	MemorySummary *ComputerSystemMemorySummary `json:"MemorySummary,omitempty"`
+	ODataID       string                       `json:"@odata.id"`
+	ODataType     string                       `json:"@odata.type"`
 }
 
 // Status represents the status and health of a resource.
@@ -51,3 +52,24 @@ const (
 	// ResetTypePowerCycle indicates a power cycle.
 	ResetTypePowerCycle PowerState = "PowerCycle"
 )
+
+// MemoryMirroring represents the type of memory mirroring supported by the system.
+type MemoryMirroring string
+
+const (
+	// MemoryMirroringSystem indicates system-level DIMM mirroring support.
+	MemoryMirroringSystem MemoryMirroring = "System"
+	// MemoryMirroringDIMM indicates DIMM-level mirroring support.
+	MemoryMirroringDIMM MemoryMirroring = "DIMM"
+	// MemoryMirroringHybrid indicates hybrid system and DIMM-level mirroring support.
+	MemoryMirroringHybrid MemoryMirroring = "Hybrid"
+	// MemoryMirroringNone indicates no DIMM mirroring support.
+	MemoryMirroringNone MemoryMirroring = "None"
+)
+
+// ComputerSystemMemorySummary represents the memory summary of a computer system.
+type ComputerSystemMemorySummary struct {
+	TotalSystemMemoryGiB *float32        `json:"TotalSystemMemoryGiB"`
+	Status               *Status         `json:"Status,omitempty"`
+	MemoryMirroring      MemoryMirroring `json:"MemoryMirroring,omitempty"`
+}
